fixed background image getting get cutoff

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -15,6 +15,7 @@ body {
 }
 
 #backgroundimage {
+  background-size: cover;
   display: block;
   position: fixed;
   top: 0;
